[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/ui/main_menu/bg/bg_panel.tres" type="StyleBox" id=1]
[ext_resource path="res://assets/fonts/Monocraft.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/fonts/PressStart2P.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/ui/host_menu/df/label_font.tres" type="DynamicFont" id=4]
[ext_resource path="res://assets/ui/host_menu/line_edit.tres" type="StyleBox" id=5]
[ext_resource path="res://assets/ui/host_menu/button/button_pressed.tres" type="StyleBox" id=6]
[ext_resource path="res://assets/ui/host_menu/button/button_hover.tres" type="StyleBox" id=7]
[ext_resource path="res://assets/ui/host_menu/button/button_normal.tres" type="StyleBox" id=8]
[ext_resource path="res://src/ui/connect_menu/ConnectMenu.gd" type="Script" id=9]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 9
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 9
font_data = ExtResource( 2 )

[node name="ConnectMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 184, 196 )
script = ExtResource( 9 )

[node name="BG" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = ExtResource( 1 )

[node name="CenterContainer" type="CenterContainer" parent="BG"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="BG/CenterContainer"]
margin_left = 156.0
margin_top = 96.0
margin_right = 356.0
margin_bottom = 204.0
rect_min_size = Vector2( 200, 0 )
rect_pivot_offset = Vector2( -675, -221 )

[node name="Title" type="Label" parent="BG/CenterContainer/VBoxContainer"]
margin_right = 200.0
margin_bottom = 16.0
custom_fonts/font = SubResource( 1 )
text = "Join Game"
align = 1
valign = 1

[node name="GridContainer" type="GridContainer" parent="BG/CenterContainer/VBoxContainer"]
margin_top = 20.0
margin_right = 200.0
margin_bottom = 85.0
columns = 2

[node name="ULabel" type="Label" parent="BG/CenterContainer/VBoxContainer/GridContainer"]
margin_top = 5.0
margin_right = 48.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 4 )
text = "Username"

[node name="Username" type="LineEdit" parent="BG/CenterContainer/VBoxContainer/GridContainer"]
margin_left = 52.0
margin_right = 200.0
margin_bottom = 19.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 2 )
custom_styles/normal = ExtResource( 5 )
placeholder_text = "Godette"

[node name="IPLabel" type="Label" parent="BG/CenterContainer/VBoxContainer/GridContainer"]
margin_top = 28.0
margin_right = 48.0
margin_bottom = 37.0
custom_fonts/font = ExtResource( 4 )
text = "IP"

[node name="IP" type="LineEdit" parent="BG/CenterContainer/VBoxContainer/GridContainer"]
margin_left = 52.0
margin_top = 23.0
margin_right = 200.0
margin_bottom = 42.0
custom_fonts/font = ExtResource( 4 )
custom_styles/normal = ExtResource( 5 )
text = "localhost"
placeholder_text = "localhost"

[node name="PLabel" type="Label" parent="BG/CenterContainer/VBoxContainer/GridContainer"]
margin_top = 51.0
margin_right = 48.0
margin_bottom = 60.0
custom_fonts/font = ExtResource( 4 )
text = "Port"

[node name="Port" type="LineEdit" parent="BG/CenterContainer/VBoxContainer/GridContainer"]
margin_left = 52.0
margin_top = 46.0
margin_right = 200.0
margin_bottom = 65.0
custom_fonts/font = ExtResource( 4 )
custom_styles/normal = ExtResource( 5 )
text = "26356"
placeholder_text = "26356"

[node name="ConnectBTN" type="Button" parent="BG/CenterContainer/VBoxContainer"]
margin_top = 89.0
margin_right = 200.0
margin_bottom = 108.0
mouse_default_cursor_shape = 2
custom_fonts/font = ExtResource( 4 )
custom_styles/hover = ExtResource( 7 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/normal = ExtResource( 8 )
text = "Connect"

[node name="BackBTN" type="Button" parent="BG"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -44.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = 29.0
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 3 )
custom_styles/hover = ExtResource( 7 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/normal = ExtResource( 8 )
text = "Back"

[connection signal="pressed" from="BG/BackBTN" to="." method="_on_BackBTN_pressed"]
